5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1712_2497.log
== TEST (2019-05-07 18:31:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:53:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 1 *):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while (t < 1 *):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:53:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:53:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:53:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.194874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2497/main.py", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:54:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:55:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- OUTPUT:
2988261.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:55:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (t < 1 * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- EXECUTION TIME:
0.238333
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
2988261.75
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
4287720.56
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
6626642.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:52:11) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (t < tempo * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- OUTPUT:
1.1303909764113273e+25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:53:22) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

while (t < tempo * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (t < tempo * 12):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:53:41) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	rend = saldo + saldo * juros / 100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2))

	

-- OUTPUT:
1.1303909764113273e+25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:56:51) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	rend = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
print(saldo)

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:57:19) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	rend = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
print(saldo)

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:58:09) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
9688.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:58:52) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
9688.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:02:22) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * qi):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
3.621976722685199e+61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:04:20) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (saldo < tempo * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:08:03) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
9688.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:08:47) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
9688.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:09:53) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * qi):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
3.621976722685199e+61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:11:42) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo * 1):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)

	

-- OUTPUT:
727.88
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:42:15) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	saldo = saldo * (juros / 100)
	saldo = round(saldo, 2)
	t = t + 1
	
print(saldo)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:43:38) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	rend = saldo * (juros / 100)
	saldo = round(rend, 2)
	t = t + 1
	
print(saldo)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:43:44) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	rend = saldo * (juros / 100)
	saldo = round(rend, 2)
	t = t + 1
	
print(saldo)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:08) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:45:19) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- EXECUTION TIME:
0.178247
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:25) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t < tempo):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:50) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (t > tempo):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:46:09) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (tempo > t):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:46:16) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t=0

while (tempo > t):
	rend = saldo * (juros) / 100
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- EXECUTION TIME:
0.227626
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:05) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:47:11) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2))
-- EXECUTION TIME:
0.14801
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:36) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1	
	print(round(saldo, 2))
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:47:43) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1	
	print(round(saldo, 2))
-- EXECUTION TIME:
0.151463
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
